# NanoCls

./: README.md  predict.py  pytorch2onnx.py  train.py
models/checkpoints/mobilenetv2/: best_model.pth
models/checkpoints/shufflenetv2/: best_model.pth
models/ncnn/: nanocls_mobilenetv2_garbage_sim-opt.param  nanocls_shufflenetv2_garbage_sim-opt.param
models/onnx/: nanocls_mobilenetv2_garbage.onnx  nanocls_mobilenetv2_garbage_sim.onnx  nanocls_shufflenetv2_garbage.onnx  nanocls_shufflenetv2_garbage_sim.onnx
ncnn_android_nanocls/: settings.gradle
ncnn_android_nanocls/app/: build.gradle
ncnn_android_nanocls/app/src/androidTest/java/com/example/ncnn_android_nanocls/: ExampleInstrumentedTest.java
ncnn_android_nanocls/app/src/main/: AndroidManifest.xml
ncnn_android_nanocls/app/src/main/assets/: nanocls_mobilenetv2_garbage_sim.mnn  nanocls_shufflenetv2_garbage_sim-opt.param  nanocls_shufflenetv2_garbage_sim.mnn
ncnn_android_nanocls/app/src/main/cpp/: CMakeLists.txt  mobilenet1.0.id.h  mobilenet_jni.cpp
ncnn_android_nanocls/app/src/main/java/com/example/ncnn_android_nanocls/: MainActivity.java  MobileNet.java
ncnn_android_nanocls/app/src/main/res/layout/: activity_main.xml
ncnn_android_nanocls/app/src/main/res/values/: strings.xml
ncnn_android_nanocls/app/src/test/java/com/example/ncnn_android_nanocls/: ExampleUnitTest.java
ncnn_macos_nanocls/: CMakeLists.txt  main.cpp  make_macos_arm64.sh  ncnn_example.cpp
ncnn_macos_nanocls/labels/: synset_words.txt
network/: __init__.py  mobilenetv2.py  mobilenetv3.py  shufflenetv2.py
